--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
           action="https://formsubmit.co/desusasaank369@gmail.com"
           method="POST"
         >
-          <input type="hidden" name="_next" value="thanks.html" />
+          <input
+            type="hidden"
+            name="_next"
+            value="https://dsasaank-369.github.io/port/thanks.html"
+          />
           <input type="hidden" name="_subject" value="New submission!" />
           <input type="hidden" name="_captcha" value="false" />
           <input type="text" name="name" required />
